@startuml

title __CONTROLLER's Class Diagram__\n

  namespace oop.focus.calendar.week.controller {
    enum FXMLPaths {
      ADDNEWEVENT
      WEEK
      path
    }
  }
  

  namespace oop.focus.calendar.week.controller {
    class oop.focus.calendar.week.controller.FXMLPaths.Constants {
        {static} + WEEK : String
    }
  }
  

  namespace oop.focus.calendar.week.controller {
    interface oop.focus.calendar.week.controller.NewEventController {
        {abstract} + addNewEvent()
        {abstract} + getDsi()
        {abstract} + getMonth()
        {abstract} + getRep()
        {abstract} + getWeek()
    }
  }
  

  namespace oop.focus.calendar.week.controller {
    class oop.focus.calendar.week.controller.NewEventControllerImpl {
        + NewEventControllerImpl()
        + addNewEvent()
        + getDsi()
        + getMonth()
        + getRep()
        + getView()
        + getWeek()
    }
  }
  

  namespace oop.focus.calendar.week.controller {
    class oop.focus.calendar.week.controller.NewEventLauncher {
        {static} + main()
        + start()
    }
  }
  

  namespace oop.focus.calendar.week.controller {
    interface oop.focus.calendar.week.controller.WeekController {
        {abstract} + getDsi()
        {abstract} + getHomePageController()
    }
  }
  

  namespace oop.focus.calendar.week.controller {
    class oop.focus.calendar.week.controller.WeekControllerImpl {
        + WeekControllerImpl()
        + getDsi()
        + getHomePageController()
        + getView()
    }
  }
  

  namespace oop.focus.calendar.week.controller {
    class oop.focus.calendar.week.controller.WeekLauncher {
        {static} + main()
        + start()
    }
  }
  

  oop.focus.calendar.week.controller.FXMLPaths +-down- oop.focus.calendar.week.controller.FXMLPaths.Constants
  oop.focus.calendar.week.controller.NewEventControllerImpl .up.|> oop.focus.calendar.week.controller.NewEventController
  oop.focus.calendar.week.controller.NewEventControllerImpl o-- oop.focus.db.DataSource : dsi
  oop.focus.calendar.week.controller.NewEventControllerImpl o-- oop.focus.homepage.model.EventManager : eventManager
  oop.focus.calendar.week.controller.NewEventControllerImpl o-- oop.focus.calendar.month.controller.CalendarMonthController : monthController
  oop.focus.calendar.week.controller.NewEventControllerImpl o-- oop.focus.calendar.week.view.NewEventWeekViewImpl : view
  oop.focus.calendar.week.controller.NewEventControllerImpl o-- oop.focus.calendar.week.controller.WeekController : weekController
  oop.focus.calendar.week.controller.NewEventLauncher -up-|> javafx.application.Application
  oop.focus.calendar.week.controller.WeekControllerImpl .up.|> oop.focus.calendar.week.controller.WeekController
  oop.focus.calendar.week.controller.WeekControllerImpl o-- oop.focus.db.DataSource : dsi
  oop.focus.calendar.week.controller.WeekControllerImpl o-- oop.focus.homepage.controller.HomePageController : homePageController
  oop.focus.calendar.week.controller.WeekControllerImpl o-- oop.focus.calendar.week.view.WeekView : view
  oop.focus.calendar.week.controller.WeekLauncher -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
